// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`added card has correct set and card id 1`] = `
Object {
  "isFetching": false,
  "value": Object {
    "faces": Object {
      "back": Object {
        "cardId": "cardId123",
        "id": "back",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "1d29g": Immutable.Record {
              "key": "1d29g",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 2,
      },
      "front": Object {
        "cardId": "cardId123",
        "id": "front",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "be5rm": Immutable.Record {
              "key": "be5rm",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 2,
      },
    },
    "id": "cardId123",
    "setId": "setId123",
    "tags": Array [],
  },
}
`;

exports[`updated card face has correct set and card id 1`] = `
Object {
  "isFetching": false,
  "lastUpdated": 1540322911516,
  "value": Object {
    "faces": Object {
      "back": Object {
        "cardId": "cardId123",
        "id": "back",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "1d29g": Immutable.Record {
              "key": "1d29g",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 0,
      },
      "front": Object {
        "cardId": "cardId123",
        "id": "front",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "be5rm": Immutable.Record {
              "key": "be5rm",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 2,
      },
    },
    "id": "cardId123",
    "setId": "setId123",
    "tags": Array [],
  },
}
`;

exports[`updated card has correct set and card id 1`] = `
Object {
  "isFetching": false,
  "lastUpdated": 1540322911516,
  "value": Object {
    "faces": Object {
      "back": Object {
        "cardId": "cardId123",
        "id": "back",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "1d29g": Immutable.Record {
              "key": "1d29g",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "1d29g",
            "anchorOffset": 0,
            "focusKey": "1d29g",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 2,
      },
      "front": Object {
        "cardId": "cardId123",
        "id": "front",
        "richTextContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "be5rm": Immutable.Record {
              "key": "be5rm",
              "type": "unstyled",
              "text": "",
              "characterList": Immutable.List [],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "be5rm",
            "anchorOffset": 0,
            "focusKey": "be5rm",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "setId": "setId123",
        "type": 2,
      },
    },
    "id": "cardId123",
    "setId": "setId123",
    "tags": Array [
      "tag1",
      "tag2",
      "tag3",
    ],
  },
}
`;
